# fin-toolkit

./: .gitignore  .mcp.json  .mcp.json.example  404.html  CLAUDE.md  README.md  fin-toolkit.yaml  index.html  install.sh  mise.toml  mkdocs.yml  pitchfork.toml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
architecture/: index.html
configuration/: index.html
docs/: architecture.md  configuration.md  getting-started.md  index.md
docs/providers/: data.md  search.md
docs/stylesheets/: dashboard.css
docs/tools/: agents.md  analysis.md  index.md  market-data.md  portfolio.md  screening.md  watchlist.md
fin_toolkit/: __init__.py  cli.py  exceptions.py  portfolio_store.py  watchlist.py
fin_toolkit/agents/: __init__.py  buffett.py  elvis.py  graham.py  lynch.py  munger.py  protocol.py  registry.py  wood.py
fin_toolkit/analysis/: alerts.py  comparison.py  fundamental.py  idea.py  indicators.py  portfolio.py  risk.py  screening.py  technical.py
fin_toolkit/config/: loader.py  models.py
fin_toolkit/mcp_server/: serialize.py  server.py
fin_toolkit/models/: financial.py  portfolio.py  price_data.py  results.py
fin_toolkit/providers/: __init__.py  brave.py  duckduckgo.py  edgar.py  exa.py  financialdatasets.py  google.py  kase.py  moex.py  pdf_report.py  perplexity.py  protocol.py  rate_limiter.py  router.py  search_protocol.py  search_router.py  searxng.py  (+5 more)
getting-started/: index.html
search/: search_index.json
stylesheets/: dashboard.css
tests/: conftest.py  test_portfolio_store.py  test_smoke.py  test_watchlist.py
tools/: index.html
(+87 files in other folders)
